--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@jsonforms/vue-vanilla": "^2.5.2",
     "core-js": "^3.6.5",
+    "vanilla-tilt": "^1.7.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
